<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">电子拍卖系统</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!Login!</string>
    <string name="user_name">用户账户：</string>
	<string name="user_pass">用户口令：</string>
	<string name="login">登录</string>
	<string name="add">添加</string>
	<string name="bid">竞价</string>
	<string name="cancel">取消</string>
	<string name="welcome">欢迎使用电子拍卖系统</string>
	<string name="view_succ">浏览竞得物品</string>
	<string name="view_bid">您参与竞标的物品</string>
	<string name="view_fail">浏览流拍物品</string>
	<string name="manage_item">您当前的拍卖物品</string>
	<string name="manage_kind">系统的所有物品种类</string>
	<string name="choose_kind">请选择一个物品种类</string>
	<string name="item_list">当前种类的物品</string>
	<string name="item_name">物品名：</string>
	<string name="item_kind">物品种类：</string>
	<string name="item_desc">物品描述：</string>
	<string name="win_price">赢取价格：</string>
	<string name="max_price">最高竞价：</string>
	<string name="remark">物品备注：</string>
	<string name="init_price">起拍价格：</string>
	<string name="avail_time">有效时间：</string>
	<string name="end_time">结束时间：</string>
	<string name="bid_price">竞标价格：</string>
	<string name="bid_time">竞标时间：</string>
	<string name="bid_user">竞标人：</string>
	<string name="add_kind_title">添加物品种类</string>
	<string name="add_item_title">添加拍卖物品</string>
	<string name="kind_name">种类名称：</string>
	<string name="kind_desc">种类描述：</string>
	<string name="item_detail_title">物品详情</string>
	<string name="you_bid">您的竞价：</string>
	
	<string name="share_sdk">Share SDK</string>
    <string name="login_with_wechat">用微信登录</string>
    <string name="login_with_qzone">用QQ空间登录</string>
    <string name="login_with_other_plat">其他帐号登录</string>
    
    <string name="userid_found">用户信息已存在，正在跳转登录操作…</string>
    <string name="logining">使用%s帐号登录中…</string>
    <string name="auth_cancel">授权操作已取消</string>
    <string name="auth_error">授权操作遇到错误，请阅读Logcat输出</string>
    <string name="auth_complete">授权成功，正在跳转登录操作…</string>
    <string name="if_register_needed">如果您需要注册功能…</string>
    <string name="after_auth">一般来说第三方登录时，第三方平台已经为您完成用户身份校验，您可以放心让用户登录。\n\n但如果您需要判断用户是否为新用户，可以在授权操作完成后，将用户的信息通过字段“HashMap userInfo”携带给login方法。客户端通过“String userId”执行登录请求，如果服务端判定此userId为未注册用户，可以将userInfo发送给注册接口，获取用户在此平台上的昵称、头像等数据，然后执行注册</string>
    <string name="ok">确定</string>
</resources>
